syntax = "proto3";

option java_package = "hmda.persistence.serialization";
option optimize_for = SPEED;

import "filing.proto";
import "submission.proto";

message CreateFilingMessage {
    FilingMessage filing = 1;
    string replyTo = 2;
}

message UpdateFilingStatusMessage {
    string period = 1;
    int32 status = 2;
    string replyTo = 3;
}

message GetFilingMessage {
    string replyTo = 1;
}

message GetFilingDetailsMessage {
    string replyTo = 1;
}

message GetLatestSignedSubmissionMessage {
    string replyTo = 1;
}

message GetOldestSignedSubmissionMessage {
    string replyTo = 1;
}

message AddSubmissionMessage {
    SubmissionMessage submission = 1;
    string replyTo = 2;
}

message UpdateSubmissionMessage {
    SubmissionMessage submission = 1;
    string replyTo = 2;
}

message GetLatestSubmissionMessage {
    string replyTo = 1;
}

message GetSubmissionSummaryMessage {
    SubmissionIdMessage submissionId = 1;
    string replyTo = 2;
}

message GetSubmissionsMessage {
    string replyTo = 1;
}

message FilingStopMessage {

}